CSS changes to nvd3-bar widget, fixing toggles and tick bars

--- a/server/seed/widgetTemplateFiles/nvd3-bar/main.css
+++ b/server/seed/widgetTemplateFiles/nvd3-bar/main.css
@@ -2,10 +2,31 @@
   background-color: white;
 }
 
+g.disabled > circle{
+  fill:#FFF !important;;
+}
+
+.nvd3 path{
+  fill: none;
+  stroke-width:2;
+}
+
 .header {
   color: black;
 }
 
-svg {
+svg { 
   font: 10px sans-serif;
+}
+
+.nvd3 line.tick {
+  fill: none;
+  stroke: #000;
+  stroke-opacity: .25;
+}
+
+.nvd3 line.zero {
+  fill: none;
+  stroke: #000;
+  stroke-opacity: 1;
 }
